Update README.md with accurate Java/JavaFX Maven project structure documentation